gitflow-feature-stash: sonarFixes